--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,98 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #373b69;
+  font-family: 'Poppins', sans-serif;
+}
+
+.header {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  background-color: #708ed2;
+  color: #fff;
+}
+
+.header .search {
+  background-color: #373b69;
+  padding: 0.5rem;
+  border-radius: 15px;
+  color: #fff;
+  text-transform: capitalize;
+  width: 100%;
   text-align: center;
+  font-size: 1rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.header .search::placeholder {
+  color: #fff;
+  font-weight: bolder;
+  font-size: 1rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movies-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.movie {
+  width: 350px;
+  border-radius: 50px;
+  padding: 1rem;
 }
 
-.card {
-  padding: 2em;
+.movie img {
+  width: 100%;
+  border-radius: 20px 20px 0 0;
+  cursor: pointer;
 }
 
-.read-the-docs {
-  color: #888;
+.movie .title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bolder;
+  background-color: #708ed2;
+  color: #fff;
+  padding: 1rem;
+  border-radius: 0 0 20px 20px;
+}
+
+.movie .title span {
+  background-color: #373b69;
+  padding: 0.5rem;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 1rem;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.footer button {
+  background-color: #708ed2;
+  color: #fff;
+  font-size: 1.5rem;
+  border-radius: 20px;
+  padding: 1rem;
 }
