--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
   font-weight: bolder;
   background-color: #708ed2;
   color: #fff;
+  position: relative;
 }
 
 .header .search {
@@ -95,4 +96,32 @@ body {
   font-size: 1.5rem;
   border-radius: 20px;
   padding: 1rem;
+}
+
+.header .btn {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+  cursor: pointer;
+  background-color: #373b69;
+  color: #fff;
+  font-size: 1rem;
+  border-radius: 20px;
+  padding: 1rem;
+}
+
+.top-btn {
+  position: fixed;
+  z-index: 1;
+  font-size: 3rem;
+  background: transparent;
+  border: none;
+  color: #fff;
+  bottom: 2rem;
+  right: 2rem;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
 }
