--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@ body {
 .movies-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .movie {
@@ -104,17 +105,17 @@ body {
   top: 2rem;
   right: 2rem;
   cursor: pointer;
-  background-color: #373b69;
+  background-color: transparent;
+  border: none;
   color: #fff;
-  font-size: 1rem;
+  font-size: 2rem;
   border-radius: 20px;
-  padding: 1rem;
 }
 
 .top-btn {
   position: fixed;
   z-index: 1;
-  font-size: 3rem;
+  font-size: 2rem;
   background: transparent;
   border: none;
   color: #fff;
