--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ body {
   width: 350px;
   border-radius: 50px;
   padding: 1rem;
+  position: relative;
 }
 
 .movie img {
@@ -59,6 +60,20 @@ body {
   border-radius: 20px 20px 0 0;
   cursor: pointer;
   display: block;
+}
+
+.movie button {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  font-size: 2.5rem;
+  background: none;
+  border: none;
+  color: #fff;
+  font-weight: 900;
+  cursor: pointer;
 }
 
 .movie .title {
@@ -70,6 +85,7 @@ body {
   color: #fff;
   padding: 1rem;
   border-radius: 0 0 20px 20px;
+  cursor: pointer;
 }
 
 .movie .title span {
@@ -126,4 +142,8 @@ body {
 
 .hidden {
   display: none;
+}
+
+.no-select {
+  user-select: none;
 }
