--- a/src/App.css
+++ b/src/App.css
@@ -116,10 +116,16 @@ body {
   padding: 1rem;
 }
 
-.header .btn {
+.header .btn-container {
   position: absolute;
-  top: 2rem;
+  top: 1rem;
   right: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.header .btn {
   cursor: pointer;
   background-color: transparent;
   border: none;
