--- a/src/App.css
+++ b/src/App.css
@@ -144,15 +144,6 @@ body {
   padding: 1rem;
 }
 
-.header .btn-container {
-  position: absolute;
-  top: 1rem;
-  right: 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 .header .btn {
   cursor: pointer;
   background-color: transparent;
@@ -180,4 +171,44 @@ body {
 
 .no-select {
   user-select: none;
+}
+
+.links-container {
+  height: 0;
+  overflow: hidden;
+  padding-right: 3rem;
+  border-radius: 15px;
+  background-color: #708ed2;
+}
+
+.show-container {
+  height: auto;
+  border: 3px solid #373b69;
+}
+
+.links {
+  list-style-type: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.links button span {
+  padding-left: 1rem;
+}
+
+.nav-toggle {
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+  color: #fff;
+}
+
+.menu-container {
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+  z-index: 1;
 }
