--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.5rem;
   font-size: 1.5rem;
   font-weight: bolder;
   background-color: #708ed2;
@@ -176,9 +176,13 @@ body {
 .links-container {
   height: 0;
   overflow: hidden;
-  padding-right: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 15px;
   background-color: #708ed2;
+  position: absolute;
+  right: 1rem;
 }
 
 .show-container {
@@ -187,11 +191,14 @@ body {
 }
 
 .links {
+  width: 250px;
   list-style-type: none;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
+  padding-left: 1.5rem;
 }
 
 .links button span {
@@ -209,6 +216,6 @@ body {
 .menu-container {
   position: absolute;
   top: 3rem;
-  left: 3rem;
+  right: 2rem;
   z-index: 1;
 }
