--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ body {
   text-transform: capitalize;
   width: 100%;
   text-align: center;
+  font-weight: bold;
   font-size: 1rem;
 }
 
@@ -215,7 +216,7 @@ body {
 
 .menu-container {
   position: absolute;
-  top: 3rem;
+  top: 1.5rem;
   right: 2rem;
   z-index: 1;
 }
